--- a/src/tailwind.css
+++ b/src/tailwind.css
@@ -16,6 +16,7 @@
 
 .shimmer-btn {
     position: relative;
+    overflow: hidden;
 }
 
 .shimmer-btn:before {
@@ -28,6 +29,7 @@
     background: linear-gradient(to right, #fff0, #fff3, #fff0);
     transform: skew(-25deg);
     animation: shimmer 3s infinite;
+    z-index: 1;
 }
 
 @keyframes shimmer {
